# simplcert

./: .gitignore  LICENSE  Makefile  README.md  certs.go  certs_test.go  go.mod  go.sum  manager.go  manager_test.go  root_ca.go  root_ca_test.go
.github/: dependabot.yaml
.github/workflows/: run-tests.yml
cmd/: main.go
cmd/cmds/: certs.go  config.go  flags.go  init.go
examples/go-server-client/: Dockerfile  buf.gen.yaml  common.go  docker-compose.yml  go.mod
examples/go-server-client/certs/: client.crt  client.key  client.pub  root-ca.crt  root-ca.key  root-ca.pub  server.crt  server.key  server.pub
examples/go-server-client/client/: main.go
examples/go-server-client/pb/: greeting.pb.go
examples/go-server-client/proto/: greeting.proto
examples/go-server-client/server/: main.go
examples/rust-server-client/: Dockerfile  README.md  buf.gen.yaml
examples/rust-server-client/apps/client/: Cargo.toml
examples/rust-server-client/apps/client/src/: main.rs
examples/rust-server-client/apps/server/: Cargo.toml
examples/rust-server-client/certs/: client.crt  client.key  client.pub  root-ca.crt  root-ca.key  root-ca.pub  server.crt  server.key  server.pub
examples/rust-server-client/proto/: greeting.proto
examples/rust-server-go-client/: README.md  buf.gen.yaml  docker-compose.yml
examples/rust-server-go-client/client/: Dockerfile  go.mod  go.sum  main.go
examples/rust-server-go-client/proto/: greeting.proto
examples/rust-server-go-client/server/: Dockerfile
pkg/security/: certs.go  manager.go  root_ca.go  root_ca_test.go
(+24 files in other folders)
